# shop_project

./: .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  pyproject.toml  tach_module_graph.dot  tach_module_graph.mmd
alembic/: env.py
alembic/versions/: 5d979f595823_initial_migration.py  9d8407e07fa0_operation_log_payload_json_type_text.py
docker-compose/: docker-compose.dev.yml  docker-compose.test.yml
docker/maxwell/: entrypoint.sh  filter.js
docker/mysql/: init.sh  init.sql.tpl
docker/nginx/: Dockerfile  nginx.conf
environment/: example.env
makefiles/: app.mk  background.mk  config.mk  database.mk  docker-compose.mk  helpers.mk  mode.mk  tests.mk  utils.mk
src/application/: customer_order_service.py  dtos.py
src/application/interfaces/: criteria_container.py  id_container.py  id_extractor.py  interfaces.py  load_query.py  p_criteria_provider.py  p_repository.py  resource_container.py
src/application/repositories/: customer_order_repository.py  p_repository.py  store_item_repository.py
src/application/resource_loader/: attribute_container.py  attribute_criterion.py  attribute_extractor.py  load_query.py  p_attribute_provider.py  query_plan.py  repository_container.py  resource_container.py  resource_loader.py  resource_manager.py  resource_snapshot.py
src/domain/: base_order.py  cart.py  cart_item.py  customer.py  customer_order.py  customer_order_item.py  domain_object.py  entity_mixin.py  exceptions.py  inventory_service.py  p_aggregate.py  p_store_item.py  replenishment_service.py  reservation_service.py  stock_item.py  store.py  store_item.py  supplier_order.py  supplier_order_item.py
src/domain/cart/: __init__.py  model.py  vo.py
src/domain/customer_order/: __init__.py  model.py  state.py  vo.py
src/domain/services/: domain_reference_registry.py  inventory_service.py  replenishment_service.py  reservation_service.py
src/domain/store_item/: inventory_service.py  model.py
src/domain/supplier_order/: __init__.py  model.py  state.py  vo.py
src/infrastructure/: exceptions.py  p_session.py  unit_of_work.py
src/infrastructure/query/: attribute_container.py  attribute_extractor.py  load_query.py  p_attribute_provider.py  p_value_provider.py  query_builder.py  query_criteria.py  query_plan.py  value_container.py  value_extractor.py
src/infrastructure/repositories/: repository_container.py
src/infrastructure/resource_manager/: domain_reference_registry.py  lock_total_order_registry.py  resource_container.py  resource_manager.py  resource_snapshot.py
src/shared/: base_state_machine.py  entity_id.py  entity_mixin.py  identity_mixin.py  p_snapshotable.py
src/shop_project/: exceptions.py  main.py  p_session.py  taskiq_worker_broker.py  unit_of_work.py
src/shop_project/application/: customer_order_service.py  exceptions.py
src/shop_project/domain/: base_aggregate.py  cart.py  customer.py  customer_order.py  escrow_account.py  exceptions.py  p_aggregate.py  persistable_entity.py  product.py  product_inventory.py  purchase_active.py  purchase_draft.py  purchase_summary.py  shipment.py  shipment_summary.py  stock_item.py  store.py  store_item.py  supplier_order.py
src/shop_project/infrastructure/: env_loader.py  exceptions.py  unit_of_work.py
src/shop_project/shared/: async_lazy_resource.py  base_state_machine.py  bytes_utils.py  create_context.py  entity_id.py  identity_mixin.py  p_snapshotable.py  phone_str.py
tests/: conftest.py  helpers.py
tests/fixtures/: fake_repository.py  fake_session.py  mock_customer_order_repository.py  mock_store_item_repository.py
tests/fixtures/application/: login.py  operation_log.py  purchase_activation.py  registration.py  totp.py
tests/fixtures/domain/: cart.py  customer.py  customer_order.py  domain_object.py  employee.py  manager.py  product.py  purchase_active.py  purchase_draft.py  purchase_summary.py  services.py  shipment.py  store.py  store_item.py  supplier_order.py
tests/fixtures/infrastructure/: account.py  auth_session.py  broker.py  claim_token.py  database.py  dependency_injection.py  entity_factories.py  external_id_totp.py  fake_repository.py  fake_session.py  repository.py  task.py  unit_of_work.py  uow.py
tests/fixtures/shared/: unique_id.py
tests/keys/: test_jwt_private.pem  test_jwt_public.pem
tests/test_application/: test_account_service.py  test_authentication_flow.py  test_customer_order_service.py  test_customer_service.py  test_dto.py  test_operation_log.py  test_purchase_flow.py  test_query.py  test_query_plan.py  test_registration_flow.py  test_registration_service.py  test_resource_container.py  test_resource_manager.py  test_resource_snapshot.py  xtest_customer_order_service.py
tests/test_application/test_background/: test_purchase_flow.py
tests/test_domain/: test_Inventory_service.py  test_cart.py  test_cart_item.py  test_customer.py  test_customer_order.py  test_customer_order_item.py  test_domain_object.py  test_employee.py  test_entity_id.py  test_entity_mixin.py  test_inventory_service.py  test_manager.py  test_product.py  test_purchase_activation_service.py  test_purchase_active.py  test_purchase_claim_service.py  test_purchase_draft.py  test_purchase_return_service.py  test_replenishment_service.py  test_reservation_service.py  test_shipment_activation_service.py  test_shipment_cancel_service.py  test_shipment_receive_service.py  test_store.py  test_store_item.py  test_supplier_order.py  test_supplier_order_item.py
tests/test_infrastructure/: test_account.py  test_alchemy.py  test_authentication.py  test_broker.py  test_container_dishka.py  test_database.py  test_plum.py  test_prebuilt_quries.py  test_query.py  test_query_plan.py  test_repository_generic.py  test_resource_container.py  test_resource_snapshot.py  test_secret_service.py  test_sql_criterion.py  test_tasks.py  test_totp.py  test_unit_of_work.py  xtest_container.py  xtest_container_async.py  xtest_container_dishka.py  xtest_dishka.py
tests/test_integration/: test_database.py
tests/test_shared/: test_bytes_utils.py  test_entity_id.py  test_entity_mixin.py
(+413 files in other folders)
