[project]
name = "shop-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "bidict (>=0.23.1,<0.24.0)",
    "plum-dispatch (>=2.5.7,<3.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "cryptography (>=46.0.1,<47.0.0)",
    "dishka (>=1.7.2,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "taskiq (>=0.11.20,<0.12.0)",
    "taskiq-aio-pika (>=0.4.4,<0.5.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pre-commit = "^4.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -s"
testpaths = ["tests"]
pythonpath = "src"
asyncio_mode = "strict"
markers = [
    "integration: mark test as integration",
    "unit: mark test as unit"
]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["shop_project", "tests"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.ruff]
lint.ignore = ["F841", "F811"]

[tool.basedpyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
extraPaths = ["src"]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/migrations", "**/tests"]

typeCheckingMode = "strict"
useLibraryCodeForTypes = true

reportMissingTypeStubs = true
reportMissingImports = true
reportMissingModuleSource = true
reportIncompatibleMethodOverride = true
reportUnknownArgumentType = true
reportUnknownParameterType = true
reportUnknownVariableType = false
reportUnknownMemberType = true
reportPrivateUsage = true
reportUnnecessaryIsInstance = false
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreComment = true
reportUninitializedInstanceVariable = true
reportUnusedCallResult = false
reportUnusedImport = false
reportUnusedVariable = false
reportRedeclaration = false

reportMissingParameterType = false
reportFunctionMemberAccess = false
reportPrivateImportUsage = false



